Add segmented storage, retention, offset snapshots (Phase 2)